<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SchenleyQuest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="level_1"></string>
    <string name="level_2"></string>
    <string name="level_3"></string>
    <string name="answer_type">answer type</string>
    <string name="title_activity_questions">Questions</string>
    <string name="title_activity_options">Options</string>
    <string name="optext">Please select an option</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="title_activity_hints">Hints</string>
    <string name="title_activity_transition_screen">TransitionScreen</string>
    <string name="background_image">background image</string>
    <string name="continuebutton"></string>
    <string name="message_answer_right">Congratulations! You have won 10000 points</string>
    <string name="message_answer_wrong">Incorrect Answer</string>
    <string name="answer">Answer: </string>
    <string name="Option1">Option 1</string>
    <string name="Option2">Option 2</string>
    <string name="Option3">Option 3</string>
    <string name="Option4">Option 4</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="title_activity_win_screen">WinScreen</string>
    <string name="hint_page">Hints</string>
    <string name="title_activity_hint_text">HintTextActivity</string>
    <string name="title_activity_direction_hint">DirectionHint</string>
    <string name="hint_text">Hint Text</string>
    <string name="hint_parchment">background image for hint text</string>
    <string name="large_text">Large Text</string>
    <string name="hint_text_button_image">Hint Text Button Image</string>
    <string name="direction_btnimage">Direction Hint Button image</string>
    <string name="direction_map">Direction Indicator Map</string>
    <string name="game_options">Game Options</string>
    <string name="schenleyq_image">Schenley Quest</string>
    <string name="progress"></string>
    <string name="photo"></string>
    <string name="score">Score: </string>
    <string name="timeLeft">Time left: </string>
    <string name="quitQuest"></string>
    <string name="title_activity_progress_view">ProgressView</string>
    <string name="title_activity_progress">Progress</string>
    <string name="unknown_activity_request_code">Unknown activity request code</string>
    <string name="no_resolution">No resolution</string>
    <string name="resolved">Resolved</string>
    <string name="app_id">1417809311816995</string>
    <string name="title_activity_photo_sharing">PhotoSharing</string>
    <string name="share_button">Share on Facebook</string>
    <string name="title_activity_high_scores">HighScores</string>
    <string name="title_activity_badges">Badges</string>

</resources>