<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Questions" >

    <Button
        android:id="@+id/hint_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_question"
        android:layout_alignParentBottom="true"
        android:onClick="questionsButtonClick"
        android:text="@string/hint" />

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:text="@string/hello_world"
        android:textSize="@dimen/activity_vertical_margin" />

    <RadioGroup
        android:id="@+id/radioOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_view_question"
        android:layout_below="@+id/text_view_question" >
        
        <RadioButton
        	android:id="@+id/radioButton1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="72dp"
        	android:onClick="questionRadioButtonClick"
        	android:text="@string/Option1" />

    	<RadioButton
        	android:id="@+id/radioButton2"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:onClick="questionRadioButtonClick"
        	android:text="@string/Option2" />

    	<RadioButton
        	android:id="@+id/radioButton3"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:onClick="questionRadioButtonClick"
        	android:text="@string/Option3" />

    	<RadioButton
        	android:id="@+id/radioButton4"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:onClick="questionRadioButtonClick"
        	android:text="@string/Option4" />
    </RadioGroup>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/hint_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:visibility="invisible"
        android:onClick="questionsButtonClick"
        android:text="@string/submit_answer" />

</RelativeLayout>