<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Hints" >
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/schenleyq_image"
        android:src="@drawable/app_back" />
    
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        android:onClick="hintButtonClick"
        android:src="@drawable/hint_text_button" 
        android:contentDescription="@string/hint_text_button_image" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="78dp"
        android:onClick="hintButtonClick"
        android:src="@drawable/direction_hint_button" 
	    android:contentDescription="@string/direction_btnimage" />

</RelativeLayout>