<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WinScreen" >
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:contentDescription="@string/schenleyq_image"
        android:scaleType="centerCrop"
        android:src="@drawable/transition_back" />

    <ImageView
        android:id="@+id/imageView3"  
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:alpha="0.40"
        android:contentDescription="@string/schenleyq_image"
        android:src="@drawable/ribbons" />

    <TextView
        android:id="@+id/textView_win_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/large_text"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_win_msg"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/schenleyq_image"
        android:layout_marginTop="41dp" />

    <Button
        android:id="@+id/buttonBackToMenu"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/backtomenu"
        android:onClick="backToMenu" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_win_msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/hello_world"
        android:textSize="18sp" 
        android:textStyle="bold" />

</RelativeLayout>